--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,6 +58,12 @@
     opacity: 0.6
 }
 
+@media (min-width: 1024px) {
+    .toggle-shadow {
+        display: none
+    }
+}
+
 .sidenav {
     position: fixed;
     z-index: 5;
@@ -76,9 +82,11 @@
 
 @media (min-width: 1024px) {
     .sidenav {
-        width: 2.5rem;
+        position: relative;
+        width: 4rem;
         --tw-translate-x: 0px;
-        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+        align-items: center
     }
 }
 
@@ -87,12 +95,21 @@
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms
+    transition-duration: 150ms;
+    transition-duration: 0.5s
+}
+
+@media (min-width: 1024px) {
+    .sidenav.active {
+        width: 8rem;
+        align-items: flex-start
+    }
 }
 
 .sidenav-item {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 0.5rem;
     border-left-width: 4px;
     --tw-border-opacity: 1;
@@ -105,6 +122,25 @@
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms
+}
+
+@media (min-width: 1024px) {
+    .sidenav-item {
+        height: 2rem;
+        width: 2rem;
+        border-radius: 0.375rem;
+        border-width: 1px
+    }
+    .sidenav.active .sidenav-item {
+        width: -moz-fit-content;
+        width: fit-content
+    }
+    .sidenav-item span {
+        display: none
+    }
+    .sidenav.active .sidenav-item span {
+        display: flex
+    }
 }
 
 .sidenav-item:hover {
@@ -121,6 +157,14 @@
     color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
+@media (min-width: 1024px) {
+    .sidenav-item:hover {
+        border-bottom-right-radius: 9999px;
+        border-bottom-left-radius: 9999px;
+        padding: 0.5rem
+    }
+}
+
 .carousel-controller {
     height: 1rem;
     width: 1rem;
@@ -134,7 +178,88 @@
     --tw-bg-opacity: 1;
     background-color: rgb(128 173 240 / var(--tw-bg-opacity))
 }
+.carousel-item {
+    position: relative;
+    display: none;
+    width: 100%;
+    flex-shrink: 0;
+    transition-property: transform;
+    transition-duration: 600ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+@media (prefers-reduced-motion: reduce) {
+    .carousel-item {
+        transition-property: none
+    }
+}
 
+.carousel-item.active {
+    display: block
+}
+
+.carousel-item img {
+    height: 100%;
+    width: 100%
+}
+
+.line-controller {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    z-index: 2;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 1rem;
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    padding: 0px
+}
+
+.line-controller .item {
+    margin-left: 3px;
+    margin-right: 3px;
+    box-sizing: content-box;
+    height: 0.5rem;
+    width: 2rem;
+    flex: 0 1 auto;
+    cursor: pointer;
+    border-radius: 9999px;
+    border-width: 0px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+    --tw-bg-opacity: 1;
+    background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+    background-clip: padding-box;
+    padding: 0px;
+    text-indent: -999px;
+    opacity: 0.5;
+    transition-property: opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 600ms;
+    transition-timing-function: cubic-bezier(0.25,0.1,0.25,1.0)
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .line-controller .item {
+        transition-property: none
+    }
+}
+.line-controller .item:hover {
+    border-width: 1px;
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgb(51 123 230 / var(--tw-bg-opacity))
+}
+
+.line-controller .item.active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(51 123 230 / var(--tw-bg-opacity))
+}
 /*
 ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 *//*
@@ -654,15 +779,6 @@ video {
   left: 15%;
   right: 15%;
 }
-.right-\[5\%\] {
-  right: 5%;
-}
-.top-0 {
-  top: 0px;
-}
-.top-\[100\%\] {
-  top: 100%;
-}
 .bottom-0 {
   bottom: 0px;
 }
@@ -675,49 +791,26 @@ video {
 .right-0 {
   right: 0px;
 }
-.z-20 {
-  z-index: 20;
+.right-\[5\%\] {
+  right: 5%;
 }
-.z-\[1\] {
-  z-index: 1;
+.top-0 {
+  top: 0px;
 }
-.z-\[2\] {
-  z-index: 2;
+.top-\[100\%\] {
+  top: 100%;
 }
 .z-10 {
   z-index: 10;
 }
-.float-left {
-  float: left;
+.z-\[1\] {
+  z-index: 1;
 }
 .\!-m-px {
   margin: -1px !important;
 }
-.mx-\[15\%\] {
-  margin-left: 15%;
-  margin-right: 15%;
-}
-.mx-\[3px\] {
-  margin-left: 3px;
-  margin-right: 3px;
-}
-.-mr-\[100\%\] {
-  margin-right: -100%;
-}
-.mb-4 {
-  margin-bottom: 1rem;
-}
-.mr-\[100\%\] {
-  margin-right: 100%;
-}
-.box-content {
-  box-sizing: content-box;
-}
 .block {
   display: block;
-}
-.inline-block {
-  display: inline-block;
 }
 .flex {
   display: flex;
@@ -728,6 +821,9 @@ video {
 .aspect-video {
   aspect-ratio: 16 / 9;
 }
+.\!h-px {
+  height: 1px !important;
+}
 .h-8 {
   height: 2rem;
 }
@@ -735,21 +831,11 @@ video {
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
+.h-full {
+  height: 100%;
 }
-.h-4 {
-  height: 1rem;
-}
-.\!h-px {
-  height: 1px !important;
-}
-.h-6 {
-  height: 1.5rem;
-}
-.h-\[3px\] {
-  height: 3px;
+.\!w-px {
+  width: 1px !important;
 }
 .w-0 {
   width: 0px;
@@ -760,6 +846,9 @@ video {
 .w-8 {
   width: 2rem;
 }
+.w-\[15\%\] {
+  width: 15%;
+}
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -767,29 +856,8 @@ video {
 .w-full {
   width: 100%;
 }
-.w-4 {
-  width: 1rem;
-}
-.\!w-px {
-  width: 1px !important;
-}
-.w-6 {
-  width: 1.5rem;
-}
-.w-\[15\%\] {
-  width: 15%;
-}
-.w-\[30px\] {
-  width: 30px;
-}
-.flex-initial {
-  flex: 0 1 auto;
-}
-.cursor-pointer {
-  cursor: pointer;
-}
-.list-none {
-  list-style-type: none;
+.basis-full {
+  flex-basis: 100%;
 }
 .flex-row-reverse {
   flex-direction: row-reverse;
@@ -818,8 +886,11 @@ video {
 .overflow-hidden {
   overflow: hidden;
 }
-.overflow-scroll {
-  overflow: scroll;
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 .\!whitespace-nowrap {
   white-space: nowrap !important;
@@ -827,72 +898,38 @@ video {
 .rounded-full {
   border-radius: 9999px;
 }
-.border-0 {
-  border-width: 0px;
-}
-.border {
-  border-width: 1px;
-}
-.border-4 {
-  border-width: 4px;
-}
-.border-2 {
-  border-width: 2px;
-}
 .\!border-0 {
   border-width: 0px !important;
 }
-.border-y-\[10px\] {
-  border-top-width: 10px;
-  border-bottom-width: 10px;
-}
-.border-solid {
-  border-style: solid;
-}
-.border-main-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(128 173 240 / var(--tw-border-opacity));
-}
-.border-transparent {
-  border-color: transparent;
+.border-0 {
+  border-width: 0px;
 }
 .bg-main-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 123 230 / var(--tw-bg-opacity));
 }
-.bg-sky-600 {
+.bg-slate-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-.bg-main-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(128 173 240 / var(--tw-bg-opacity));
-}
 .bg-none {
   background-image: none;
-}
-.bg-clip-padding {
-  background-clip: padding-box;
-}
-.p-2 {
-  padding: 0.5rem;
-}
-.p-4 {
-  padding: 1rem;
 }
 .\!p-0 {
   padding: 0px !important;
 }
 .p-0 {
   padding: 0px;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -916,12 +953,13 @@ video {
 .text-end {
   text-align: end;
 }
-.-indent-\[999px\] {
-  text-indent: -999px;
-}
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -930,10 +968,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 .font-bold {
   font-weight: 700;
@@ -944,10 +978,6 @@ video {
 .text-main-600 {
   --tw-text-opacity: 1;
   color: rgb(51 123 230 / var(--tw-text-opacity));
-}
-.text-sky-600 {
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 .text-slate-100 {
   --tw-text-opacity: 1;
@@ -960,54 +990,22 @@ video {
 .opacity-50 {
   opacity: 0.5;
 }
-.outline {
-  outline-style: solid;
-}
 .outline-0 {
   outline-width: 0px;
-}
-.outline-main-400 {
-  outline-color: #80adf0;
 }
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .duration-150 {
   transition-duration: 150ms;
-}
-.duration-\[600ms\] {
-  transition-duration: 600ms;
 }
 .ease-\[cubic-bezier\(0\.25\2c 0\.1\2c 0\.25\2c 1\.0\)\] {
   transition-timing-function: cubic-bezier(0.25,0.1,0.25,1.0);
 }
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 .\!\[clip\:rect\(0\2c 0\2c 0\2c 0\)\] {
   clip: rect(0,0,0,0) !important;
-}
-
-.after\:clear-both::after {
-  content: var(--tw-content);
-  clear: both;
-}
-
-.after\:block::after {
-  content: var(--tw-content);
-  display: block;
-}
-
-.after\:content-\[\'\'\]::after {
-  --tw-content: '';
-  content: var(--tw-content);
 }
 
 .hover\:border-0:hover {
@@ -1120,5 +1118,21 @@ video {
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:h-\[80vh\] {
+    height: 80vh;
+  }
+
+  .lg\:h-\[60vh\] {
+    height: 60vh;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 }
