--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,31 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css);
 @import url(https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css);
+section#products {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem
+}
+
+.toggle-shadow {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    z-index: 4;
+    height: 100vh;
+    width: 100%;
+    --tw-bg-opacity: 1;
+    background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+    opacity: 0.6
+}
+@media (min-width: 1024px) {
+    .toggle-shadow {
+        display: none
+    }
+}
 .dropdown:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(51 123 230 / var(--tw-bg-opacity));
@@ -43,222 +69,369 @@
     --tw-bg-opacity: 1;
     background-color: rgb(209 213 219 / var(--tw-bg-opacity))
 }
-
-.toggle-shadow {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    z-index: 4;
-    height: 100vh;
-    width: 100%;
-    --tw-bg-opacity: 1;
-    background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-    opacity: 0.6
-}
-
-@media (min-width: 1024px) {
-    .toggle-shadow {
-        display: none
-    }
-}
-
 .sidenav {
+
     position: fixed;
+
     z-index: 5;
+
     display: flex;
+
     height: 100vh;
+
     width: 60%;
+
     --tw-translate-x: -100%;
+
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+
     flex-direction: column;
-    border-right-width: 4px;
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+
     padding-left: 0.5rem;
+
     padding-right: 0.5rem
 }
 
 @media (min-width: 1024px) {
+
     .sidenav {
+
         position: relative;
+
         width: 4rem;
+
         --tw-translate-x: 0px;
+
         transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+
         align-items: center
     }
 }
 
 .sidenav.active {
+
     --tw-translate-x: 0px;
+
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+
     transition-property: all;
+
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     transition-duration: 150ms;
+
     transition-duration: 0.5s
 }
 
 @media (min-width: 1024px) {
+
     .sidenav.active {
+
         width: 8rem;
+
         align-items: flex-start
     }
 }
 
 .sidenav-item {
+
     display: flex;
+
     align-items: center;
-    justify-content: center;
+
     gap: 0.5rem;
+
     border-left-width: 4px;
+
     --tw-border-opacity: 1;
+
     border-color: rgb(30 41 59 / var(--tw-border-opacity));
+
     padding: 0.5rem;
+
     font-weight: 600;
+
     text-transform: uppercase;
+
     --tw-text-opacity: 1;
+
     color: rgb(255 255 255 / var(--tw-text-opacity));
+
     transition-property: all;
+
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     transition-duration: 150ms
 }
 
 @media (min-width: 1024px) {
+
     .sidenav-item {
+
         height: 2rem;
+
         width: 2rem;
+
+        justify-content: center;
+
         border-radius: 0.375rem;
+
         border-width: 1px
     }
+
     .sidenav.active .sidenav-item {
+
         width: -moz-fit-content;
+
         width: fit-content
     }
+
     .sidenav-item span {
+
         display: none
     }
+
     .sidenav.active .sidenav-item span {
+
         display: flex
     }
 }
 
 .sidenav-item:hover {
+
     border-top-right-radius: 9999px;
+
     border-bottom-right-radius: 9999px;
+
     border-bottom-left-radius: 9999px;
+
     --tw-border-opacity: 1;
+
     border-color: rgb(2 132 199 / var(--tw-border-opacity));
+
     --tw-bg-opacity: 1;
+
     background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+
     padding-left: 1rem;
+
     font-weight: 700;
+
     --tw-text-opacity: 1;
+
     color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 @media (min-width: 1024px) {
+
     .sidenav-item:hover {
+
         border-bottom-right-radius: 9999px;
+
         border-bottom-left-radius: 9999px;
+
         padding: 0.5rem
     }
 }
 
+
 .carousel-controller {
+
     height: 1rem;
+
     width: 1rem;
+
     border-radius: 9999px;
+
     border-width: 2px;
+
     --tw-border-opacity: 1;
+
     border-color: rgb(128 173 240 / var(--tw-border-opacity))
 }
 
 .carousel-controller.active {
+
     --tw-bg-opacity: 1;
+
     background-color: rgb(128 173 240 / var(--tw-bg-opacity))
 }
 .carousel-item {
+
     position: relative;
+
     display: none;
+
     width: 100%;
+
     flex-shrink: 0;
+
     transition-property: transform;
+
     transition-duration: 600ms;
+
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 @media (prefers-reduced-motion: reduce) {
+
     .carousel-item {
+
         transition-property: none
     }
 }
 
 .carousel-item.active {
+
     display: block
 }
 
 .carousel-item img {
+
     height: 100%;
+
     width: 100%
 }
 
 .line-controller {
+
     position: absolute;
+
     right: 0px;
+
     bottom: 0px;
+
     left: 0px;
+
     z-index: 2;
+
     margin-left: 15%;
+
     margin-right: 15%;
+
     margin-bottom: 1rem;
+
     display: flex;
+
     list-style-type: none;
+
     justify-content: center;
+
     padding: 0px
 }
 
 .line-controller .item {
+
     margin-left: 3px;
+
     margin-right: 3px;
+
     box-sizing: content-box;
+
     height: 0.5rem;
+
     width: 2rem;
+
     flex: 0 1 auto;
+
     cursor: pointer;
+
     border-radius: 9999px;
+
     border-width: 0px;
+
     border-top-width: 2px;
+
     border-bottom-width: 2px;
+
     border-style: solid;
+
     border-color: transparent;
+
     --tw-bg-opacity: 1;
+
     background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+
     background-clip: padding-box;
+
     padding: 0px;
+
     text-indent: -999px;
+
     opacity: 0.5;
+
     transition-property: opacity;
+
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     transition-duration: 600ms;
+
     transition-timing-function: cubic-bezier(0.25,0.1,0.25,1.0)
 }
 
 @media (prefers-reduced-motion: reduce) {
+
     .line-controller .item {
+
         transition-property: none
     }
 }
 .line-controller .item:hover {
+
     border-width: 1px;
+
     --tw-border-opacity: 1;
+
     border-color: rgb(255 255 255 / var(--tw-border-opacity));
+
     --tw-bg-opacity: 1;
+
     background-color: rgb(51 123 230 / var(--tw-bg-opacity))
 }
 
 .line-controller .item.active {
+
     --tw-bg-opacity: 1;
+
     background-color: rgb(51 123 230 / var(--tw-bg-opacity))
+}
+.product-shelf {
+
+    display: grid;
+
+    width: 100%;
+
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+
+    place-items: center;
+
+    gap: 0.5rem
+}
+
+@media (min-width: 768px) {
+
+    .product-shelf {
+
+        grid-template-columns: repeat(4, minmax(0, 1fr))
+    }
+}
+
+@media (min-width: 1024px) {
+
+    .product-shelf {
+
+        grid-template-columns: repeat(5, minmax(0, 1fr))
+    }
+}
+
+.product-shelf .item {
+
+    height: 8rem;
+
+    width: 8rem;
+
+    --tw-bg-opacity: 1;
+
+    background-color: rgb(15 23 42 / var(--tw-bg-opacity))
 }
 /*
 ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
@@ -815,6 +988,9 @@ video {
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
@@ -858,6 +1034,12 @@ video {
 }
 .basis-full {
   flex-basis: 100%;
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.flex-row {
+  flex-direction: row;
 }
 .flex-row-reverse {
   flex-direction: row-reverse;
@@ -904,6 +1086,13 @@ video {
 .border-0 {
   border-width: 0px;
 }
+.border-l-4 {
+  border-left-width: 4px;
+}
+.border-main-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 81 202 / var(--tw-border-opacity));
+}
 .bg-main-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 123 230 / var(--tw-bg-opacity));
@@ -934,6 +1123,10 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1007,80 +1200,63 @@ video {
 .\!\[clip\:rect\(0\2c 0\2c 0\2c 0\)\] {
   clip: rect(0,0,0,0) !important;
 }
-
 .hover\:border-0:hover {
   border-width: 0px;
 }
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-
 .hover\:no-underline:hover {
   text-decoration-line: none;
 }
-
 .hover\:opacity-90:hover {
   opacity: 0.9;
 }
-
 .hover\:outline-none:hover {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-
 .hover\:outline-0:hover {
   outline-width: 0px;
 }
-
 .focus\:w-full:focus {
   width: 100%;
 }
-
 .focus\:px-2:focus {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-
 .focus\:text-white:focus {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-
 .focus\:no-underline:focus {
   text-decoration-line: none;
 }
-
 .focus\:opacity-90:focus {
   opacity: 0.9;
 }
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-
 .group\/corousel-item:hover .group-hover\/corousel-item\:block {
   display: block;
 }
-
 .group\/search:hover .group-hover\/search\:p-0 {
   padding: 0px;
 }
-
 @media (prefers-reduced-motion: reduce) {
 
   .motion-reduce\:transition-none {
     transition-property: none;
   }
 }
-
 @media (prefers-color-scheme: dark) {
 
   .dark\:bg-slate-800 {
@@ -1098,7 +1274,6 @@ video {
     color: rgb(51 123 230 / var(--tw-text-opacity));
   }
 }
-
 @media (min-width: 640px) {
 
   .sm\:w-fit {
@@ -1106,30 +1281,40 @@ video {
     width: fit-content;
   }
 }
-
 @media (min-width: 768px) {
 
   .md\:block {
     display: block;
   }
-}
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+}
 @media (min-width: 1024px) {
 
   .lg\:flex {
     display: flex;
   }
 
-  .lg\:h-\[80vh\] {
-    height: 80vh;
-  }
-
   .lg\:h-\[60vh\] {
     height: 60vh;
   }
 
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
   }
 
   .lg\:items-center {
