--- a/resources/css/components/organisms/product.css
+++ b/resources/css/components/organisms/product.css
@@ -1,7 +1,15 @@
 .product-shelf {
-  @apply w-full grid place-items-center gap-2 grid-cols-2 md:grid-cols-4 lg:grid-cols-5;
+  @apply w-full grid place-items-center gap-2 grid-cols-2 md:grid-cols-4 lg:grid-cols-6;
 }
 
 .product-shelf .item {
-  @apply w-32 h-32 bg-slate-900;
+  @apply pb-2 w-full bg-main-800 rounded-lg overflow-hidden border border-main-700 flex flex-col items-center gap-2;
+}
+
+.product-shelf .item .product-photo {
+  @apply w-full h-max rounded-lg;
+}
+
+.product-shelf .item .product-name {
+  @apply px-2 text-xs text-slate-50 text-center max-h-12 h-12 overflow-scroll capitalize;
 }
