FE: change sidenav & add style products 1. change sidenav to fixed 2. add products styles [paginate, show more button] (mobile)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,7 @@
 @import "./layouts/index.css";
 
 @import "./components/atoms/shadow.css";
+@import "./components/atoms/link.css";
 
 @import "./components/organisms/dropdown.css";
 @import "./components/organisms/sidenav.css";
