--- a/resources/css/components/organisms/product.css
+++ b/resources/css/components/organisms/product.css
@@ -1,5 +1,6 @@
 .product-shelf {
-  @apply w-full grid place-items-center gap-2 grid-cols-2 md:grid-cols-4 lg:grid-cols-6;
+  @apply w-full grid place-items-center gap-2 grid-rows-2 grid-cols-2 md:grid-cols-5 lg:grid-cols-6;
+  scroll-snap-type: x proximity;
 }
 
 .product-shelf .item {
@@ -12,4 +13,12 @@
 
 .product-shelf .item .product-name {
   @apply px-2 text-xs text-slate-50 text-center max-h-12 h-12 overflow-scroll capitalize;
+}
+
+.paginate-products {
+  @apply flex justify-center gap-2;
+}
+
+.paginate-products .btn {
+  @apply w-16 h-4 rounded-full bg-transparent border border-main-800;
 }
