--- a/resources/css/layouts/section.css
+++ b/resources/css/layouts/section.css
@@ -1,3 +1,6 @@
 section#products {
-  @apply px-4 flex flex-col gap-2;
+  @apply px-4 py-8 flex flex-col gap-2;
+}
+section .section-label:first-child {
+  @apply text-lg;
 }
